// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SingleRepo /> when it is a fork should render and match the snapshot 1`] = `
<div
  class="github-repo-row"
>
  <div
    class="github-repo-row-name"
  >
    <button
      class="cta"
      id="github-repo-button-123"
      onClick={[Function]}
      type="button"
    >
      SELECT
    </button>
    dev.to
    <span
      class="github-repo-fork"
    >
      fork
    </span>
  </div>
</div>
`;

exports[`<SingleRepo /> when it is not already selected should render and match the snapshot 1`] = `
<div
  class="github-repo-row"
>
  <div
    class="github-repo-row-name"
  >
    <button
      class="cta"
      id="github-repo-button-123"
      onClick={[Function]}
      type="button"
    >
      SELECT
    </button>
    dev.to
  </div>
</div>
`;

exports[`<SingleRepo /> when it is selected should render and match the snapshot 1`] = `
<div
  class="github-repo-row github-repo-row-selected"
>
  <div
    class="github-repo-row-name"
  >
    <button
      class="cta"
      id="github-repo-button-123"
      onClick={[Function]}
      type="button"
    >
      REMOVE
    </button>
    dev.to
  </div>
</div>
`;
